# drf_tutorial

./: db.sqlite3  pyproject.toml
quckstart/: apps.py  views.py
tutorial/: settings.py  urls.py
